[package]
name = "stylus-seabrick"
version = "0.0.1"
edition = "2021"

[dependencies]
alloy-primitives = "0.7.6"
alloy-sol-types = "0.7.6"
stylus-sdk = "0.5.2"
mini-alloc = "0.4.2"
hex = { version = "0.4.3", features = ["alloc"] }
inkmate = { version = "0.0.6", features = ["erc721", "erc20"] }

[dev-dependencies]
tokio = { version = "1.39", features = ["full"] }
ethers = "2.0"
eyre = "0.6.12"

[features]
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"

[workspace]
