[workspace]
members = ["erc721", "seabrick"]
resolver = "2"

[workspace.dependencies]
alloy-primitives = "0.7.6"
alloy-sol-types = "0.7.6"
stylus-sdk = "0.5.2"
mini-alloc = "0.4.2"
hex = { version = "0.4.3", features = ["alloc"] }
inkmate = { version = "0.0.6", features = ["erc721", "erc20"] }
tokio = { version = "1.39", features = ["full"] }
ethers = "2.0"
eyre = "0.6.12"


[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"
