[workspace]
members = [
    "contracts/erc721",
    "contracts/seabrick_nft",
    "contracts/ownable",
    "contracts/initialization",
    "contracts/market_seabrick",
]
resolver = "2"

[workspace.dependencies]
alloy-primitives = "0.7.6"
alloy-sol-types = "0.7.6"
stylus-sdk = "0.5.2"
mini-alloc = "0.4.2"


[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "z"
