[package]
name = "initialization"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]
path = "./lib.rs"

[dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
stylus-sdk = { workspace = true }
mini-alloc = { workspace = true }

[features]
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]
