[package]
name = "ownable"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]
path = "./lib.rs"

[dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
stylus-sdk = { workspace = true }
mini-alloc = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
ethers = { workspace = true }
eyre = { workspace = true }

[features]
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]
